unpackaged/main/default/objects/loan__Investor_Fund_Transaction__c/loan__Investor_Fund_Transaction__c.object-meta.xml
<CustomObject>
    <description>Record represents funds added to Investor available funds in Fractionalization.</description>
    <label>Investor Fund Transaction</label>
    <nameField>
        <displayFormat>IFT-{000000000}</displayFormat>
        <label>Investor Funds Transaction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Investor Fund Transaction</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>