unpackaged/main/default/objects/loan__Investor_Fund_Transaction__c/fields/loan__Account__c.field-meta.xml
<CustomField>
    <fullName>loan__Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Investor Fund Transaction</relationshipLabel>
    <relationshipName>Investor_Fund_Transaction</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>