unpackaged/main/default/objects/loan__Investor_Fund_Transaction__c/fields/loan__Payment_Mode__c.field-meta.xml
<CustomField>
    <fullName>loan__Payment_Mode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Mode</label>
    <referenceTo>loan__Payment_Mode__c</referenceTo>
    <relationshipLabel>Investor Fund Transaction</relationshipLabel>
    <relationshipName>Investor_Fund_Transaction</relationshipName>
    <type>Lookup</type>
</CustomField>