unpackaged/main/default/objects/loan__Investor_Fund_Transaction__c/fields/loan__Reject_Reason__c.field-meta.xml
<CustomField>
    <fullName>loan__Reject_Reason__c</fullName>
    <label>Reject Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>