unpackaged/main/default/objects/loan__Investor_Fund_Transaction__c/fields/loan__Transaction_Date__c.field-meta.xml
<CustomField>
    <fullName>loan__Transaction_Date__c</fullName>
    <defaultValue>$User.loan__Current_Branch_s_System_Date__c</defaultValue>
    <label>Transaction Date</label>
    <type>Date</type>
</CustomField>