unpackaged/main/default/objects/loan__Investor_Fund_Transaction__c/validationRules/loan__Check_Transaction_amount.validationRule-meta.xml
<ValidationRule>
    <fullName>loan__Check_Transaction_amount</fullName>
    <active>true</active>
    <errorConditionFormula>OR(loan__Transaction_Amount__c == 0,
ISBLANK( loan__Transaction_Amount__c ))</errorConditionFormula>
    <errorDisplayField>loan__Transaction_Amount__c</errorDisplayField>
    <errorMessage>Transaction amount can not be zero.</errorMessage>
</ValidationRule>