unpackaged/main/default/objects/loan__Investor_Fund_Transaction__c/validationRules/loan__Check_Withdrawal_Amount.validationRule-meta.xml
<ValidationRule>
    <fullName>loan__Check_Withdrawal_Amount</fullName>
    <active>true</active>
    <errorConditionFormula>ISNEW() &amp;&amp; (loan__Transaction_Amount__c &lt; 0) &amp;&amp;  (loan__Account__r.loan__Undeployed_Funds__c &lt; ABS(loan__Transaction_Amount__c))</errorConditionFormula>
    <errorMessage>Cannot withdraw more than available funds.</errorMessage>
</ValidationRule>